[package]
name = "nearquaad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = "0.16.1"
tokio = { version = "1.15.0", features = ["full"] }
tungstenite = "0.16.0"
